<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            android:id="@+id/txt_imc_desc"
            style="@style/textViewForm"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/imc_desc" />


        <EditText
            android:id="@+id/edit_imc_name"
            style="@style/editTextForm"
            android:hint="@string/name"
            android:maxLength="@android:integer/config_longAnimTime"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edit_imc_weight"
            style="@style/editTextForm"
            android:autofillHints="@string/weight"
            android:hint="@string/weight" />


        <EditText
            android:id="@+id/edit_imc_height"
            style="@style/editTextForm"
            android:autofillHints="@string/height"
            android:hint="@string/height" />

        <Button
            android:id="@+id/btn_imc_send"
            style="@style/buttonCalcForm"
            android:text="@string/calc" />
    </LinearLayout>
</ScrollView>